--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Crash Course</title>
   </head>
-  <body></body>
+  <body>
+    Hello Git
+
+    <script src="app.js"></script>
+  </body>
 </html>
