--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Git Crash Course</title>
   </head>
   <body>
+    <header>header</header>
+
     Hello Git
 
     <script src="app.js"></script>
